# sigkerax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  run_tests.yml
sigkerax/: sigkernel.py  solver.py  static_kernels.py  utils.py
tests/: requirements.txt  test_sigkernel.py  test_sigkernel_derivatives.py
