[tool.poetry]
name = "sigkerax"
version = "0.2.1"
description = "Signature kernel computations via PDE solvers in JAX"
authors = ["Cristopher Salvi <crispitagorico@gmail.com>"]
readme = "README.md"
repository = "https://github.com/crispitagorico/sigkerax"
keywords = ["jax", "signatures", "kernels", "PDE-solvers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
